# mcp-tool-bridge

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEFERRED.md  README.md  TODO.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  nightly.yml
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: lib.rs
crates/hook/: Cargo.toml
crates/hook/src/: main.rs  parser.rs
crates/tools/: Cargo.toml
crates/tools/benches/: parsers.rs
crates/tools/src/: batch.rs  benchmark.rs  curl.rs  diff.rs  dispatch.rs  docker.rs  find.rs  gh_api.rs  git_log.rs  git_show.rs  git_status.rs  kubectl.rs  lib.rs  ls.rs  lsof.rs  main.rs  pipe.rs  ps.rs  sqlite.rs  wc.rs
crates/tools/tests/e2e/: batch_tests.rs  curl_tests.rs  diff_tests.rs  failure_mode_tests.rs  find_tests.rs  git_tests.rs  harness.rs  ls_tests.rs  main.rs  mcp_protocol_tests.rs  pipe_tests.rs  property_tests.rs  real_infra_tests.rs  snapshot_tests.rs  sqlite_tests.rs  system_tests.rs  tools_flag_tests.rs  wc_tests.rs
crates/tools/tests/e2e/snapshots/: e2e__snapshot_tests__batch_result.snap  e2e__snapshot_tests__diff_format_error.snap  e2e__snapshot_tests__diff_simple.snap  e2e__snapshot_tests__find_basic.snap  e2e__snapshot_tests__ls_output.snap  e2e__snapshot_tests__pipe_result.snap  e2e__snapshot_tests__sqlite_query.snap  e2e__snapshot_tests__sqlite_tables.snap  e2e__snapshot_tests__wc_inline.snap  e2e__snapshot_tests__wc_multipath.snap
docs/: README.md  category-audit.md
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
tests/: integration.py
(+2 files in other folders)
