[package]
name = "mcp-tool-bridge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-tool-bridge"
path = "src/main.rs"

[dependencies]
bridge-core = { path = "../bridge-core" }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros", "schemars"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
